--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "bensampo/laravel-enum": "^1.27",
+        "bensampo/laravel-enum": "^1.28",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.4",
         "laravel/framework": "^6.2",
         "laravel/passport": "^8.0",
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
-        "league/fractal": "^0.18.0"
+        "league/fractal": "^0.18.0",
+        "nesbot/carbon": "^2.28"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
