--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "nesbot/carbon": "^2.28"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.6",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "laravel/telescope": "^2.1",
